fixed alignment of labels on item h2 titles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,6 +24,8 @@ body {
   }
 }
 
+h2 > span.label { margin-right: 1em; vertical-align: 13%; }
+
 .hidden { display: none; }
 
 .video-container {
